// Copyright (C) 2021 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";

package picotest;

message Types {
	int32    int32    =  1;
	int64    int64    =  2;
	uint32   uint32   =  3;
	uint64   uint64   =  4;
	sint32   sint32   =  5;
	sint64   sint64   =  6;
	fixed32  fixed32  =  7;
	fixed64  fixed64  =  8;
	sfixed32 sfixed32 =  9;
	sfixed64 sfixed64 = 10;
	float    float    = 11;
	double   double   = 12;
	bool     bool     = 13;
	string   string   = 14;
	bytes    bytes    = 15;

	Message message = 16;

	repeated int32    int32s    =  17;
	repeated int64    int64s    =  18;
	repeated uint32   uint32s   =  19;
	repeated uint64   uint64s   =  20;
	repeated sint32   sint32s   =  21;
	repeated sint64   sint64s   =  22;
	repeated fixed32  fixed32s  =  23;
	repeated fixed64  fixed64s  =  24;
	repeated sfixed32 sfixed32s =  25;
	repeated sfixed64 sfixed64s = 26;
	repeated float    floats    = 27;
	repeated double   doubles   = 28;
	repeated bool     bools     = 29;
	repeated string   strings   = 30;
	repeated bytes    bytess    = 31;

	repeated Message messages = 32;

	map<string, string> values = 33;
}

message Message {
	int32 int32 = 1;
}